[package]
name = "dmm-hook"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]
name = "dmmhook"

[dependencies]
minhook = "0.9"
pelite = "0.10"
windows = { version = "0.62", features = ["Win32_Foundation", "Win32_System_LibraryLoader", "Win32_System_Threading", "Win32_UI_Shell", "Win32_System_Registry", "Win32_System_Diagnostics_Debug", "Win32_System_Memory", "Win32_System_ProcessStatus"] }
